force-app/main/default/objects/ssot__ClinicalEncounterDiagnosis__dlm/ssot__ClinicalEncounterDiagnosis__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Clinical Encounter</referenceEntityGroup>
        <referenceEntityName>ClinicalEncounterDiagnosis</referenceEntityName>
        <referenceEntitySubjectArea>Clinical Encounter</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>