force-app/main/default/objects/ssot__ClinicalEncounterDiagnosis__dlm/fields/ssot__ClinicalEncounterDiagnosisUsageTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClinicalEncounterDiagnosisUsageTypeId__c</fullName>
    <label>Clinical Encounter Diagnosis Usage Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClinicalEncounterDiagnosisUsageTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>