force-app/main/default/objects/ssot__ClinicalEncounterDiagnosis__dlm/fields/ssot__rel_1716726049076_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726049076_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClinicalEncounterDiagnosis_Diagnosis_rel</label>
    <referenceTo>ssot__PatientHealthCondition__dlm</referenceTo>
    <relationshipLabel>ClinicalEncounterDiagnosis_Diagnosis_rel</relationshipLabel>
    <relationshipName>rel_1716726049076_end</relationshipName>
    <type>Lookup</type>
</CustomField>